# serializer version: 1
# name: test_device_list
  '''
  <section class="s-section">
      <div class="s-section__container container">
          <div class="row">
              <div class="col-6">
                  <div class="c-box">
                      <h2>
                          Mes appareils
                      </h2>
                      <form method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          <p>
                              Voici la liste de vos appareils configurés :
                          </p>
                          <table class="table table-sm">
                              <caption class="visually-hidden">
                                  Liste de vos appareils configurés
                              </caption>
                              <thead>
                                  <tr>
                                      <th scope="col">
                                      </th>
                                      <th scope="col">
                                          Nom
                                      </th>
                                      <th scope="col">
                                          Créé le
                                      </th>
                                      <th scope="col">
                                          Dernière utilisation
                                      </th>
                                      <th scope="col">
                                          Supprimer
                                      </th>
                                  </tr>
                              </thead>
                              <tbody>
                                  <tr>
                                      <td>
                                          <i class="ri-verified-badge-fill text-success" data-bs-placement="top" data-bs-title="Vous avez utilisé cet appareil pour vous connecter." data-bs-toggle="tooltip">
                                          </i>
                                      </td>
                                      <td>
                                          Mon appareil
                                      </td>
                                      <td>
                                          11 mars 2025 06:18
                                      </td>
                                      <td>
                                          11 mars 2025 06:18
                                      </td>
                                      <td>
                                          <button aria-label="Supprimer l’appareil Mon appareil" class="btn btn-sm btn-link disabled" data-bs-placement="top" data-bs-target="#delete_[PK of device]_modal" data-bs-title="Impossible de supprimer l’appareil que vous avez utilisé pour vous connecter." data-bs-toggle="tooltip" type="button">
                                              <i aria-hidden="true" class="ri-delete-bin-line fw-normal">
                                              </i>
                                          </button>
                                      </td>
                                  </tr>
                              </tbody>
                          </table>
                          <a class="btn btn-block btn-primary" href="/otp/enrollment_step_1">
                              Configurer un
                                  nouvel
                                  appareil
                          </a>
                          <div aria-hidden="true" class="modal fade" id="delete_[PK of device]_modal" tabindex="-1">
                              <div class="modal-dialog modal-dialog-centered">
                                  <div class="modal-content">
                                      <div class="modal-header">
                                          <h3 class="modal-title">
                                              Êtes-vous sûr de vouloir supprimer l'appareil Mon appareil ?
                                          </h3>
                                      </div>
                                      <div class="modal-body">
                                          <p>
                                              Cette action est irréversible.
                                          </p>
                                      </div>
                                      <div class="modal-footer">
                                          <button class="btn btn-sm btn-outline-primary" data-bs-dismiss="modal" type="button">
                                              Retour
                                          </button>
                                          <button aria-label="Supprimer l’appareil Mon appareil" class="btn btn-sm btn-danger" name="delete-device" value="[PK of device]">
                                              Confirmer la suppression
                                          </button>
                                      </div>
                                  </div>
                              </div>
                          </div>
                      </form>
                  </div>
              </div>
          </div>
      </div>
  </section>
  
  '''
# ---
# name: test_delete_devices[with_device]
  '''
  <section class="s-section">
      <div class="s-section__container container">
          <div class="row">
              <div class="col-6">
                  <div class="c-box">
                      <h2>
                          Mes appareils
                      </h2>
                      <form method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          <p>
                              Voici la liste de vos appareils configurés :
                          </p>
                          <table class="table table-sm">
                              <caption class="visually-hidden">
                                  Liste de vos appareils configurés
                              </caption>
                              <thead>
                                  <tr>
                                      <th scope="col">
                                      </th>
                                      <th scope="col">
                                          Nom
                                      </th>
                                      <th scope="col">
                                          Créé le
                                      </th>
                                      <th scope="col">
                                          Dernière utilisation
                                      </th>
                                      <th scope="col">
                                          Supprimer
                                      </th>
                                  </tr>
                              </thead>
                              <tbody>
                                  <tr>
                                      <td>
                                          <i class="ri-verified-badge-fill text-success" data-bs-placement="top" data-bs-title="Vous avez utilisé cet appareil pour vous connecter." data-bs-toggle="tooltip">
                                          </i>
                                      </td>
                                      <td>
                                          authenticator
                                      </td>
                                      <td>
                                          11 mars 2025 06:18
                                      </td>
                                      <td>
                                          11 mars 2025 06:20
                                      </td>
                                      <td>
                                          <button aria-label="Supprimer l’appareil authenticator" class="btn btn-sm btn-link disabled" data-bs-placement="top" data-bs-target="#delete_[PK of device_1]_modal" data-bs-title="Impossible de supprimer l’appareil que vous avez utilisé pour vous connecter." data-bs-toggle="tooltip" type="button">
                                              <i aria-hidden="true" class="ri-delete-bin-line fw-normal">
                                              </i>
                                          </button>
                                      </td>
                                  </tr>
                                  <tr>
                                      <td>
                                      </td>
                                      <td>
                                          bitwarden
                                      </td>
                                      <td>
                                          11 mars 2025 06:19
                                      </td>
                                      <td>
                                          <i class="text-disabled">
                                              jamais
                                          </i>
                                      </td>
                                      <td>
                                          <button aria-label="Supprimer l’appareil bitwarden" class="btn btn-sm btn-link text-danger" data-bs-target="#delete_[PK of device_2]_modal" data-bs-toggle="modal" type="button">
                                              <i aria-hidden="true" class="ri-delete-bin-line fw-normal">
                                              </i>
                                          </button>
                                      </td>
                                  </tr>
                              </tbody>
                          </table>
                          <a class="btn btn-block btn-primary" href="/otp/enrollment_step_1">
                              Configurer un
                                  nouvel
                                  appareil
                          </a>
                          <div aria-hidden="true" class="modal fade" id="delete_[PK of device_1]_modal" tabindex="-1">
                              <div class="modal-dialog modal-dialog-centered">
                                  <div class="modal-content">
                                      <div class="modal-header">
                                          <h3 class="modal-title">
                                              Êtes-vous sûr de vouloir supprimer l'appareil authenticator ?
                                          </h3>
                                      </div>
                                      <div class="modal-body">
                                          <p>
                                              Cet appareil est celui que vous avez utilisé pour vous connecter.
                                          </p>
                                          <p>
                                              Si vous le supprimez, vous devrez immédiatement confirmer votre identité avec un des autres appareils que vous avez enregistré.
                                          </p>
                                          <p>
                                              Cette action est irréversible.
                                          </p>
                                      </div>
                                      <div class="modal-footer">
                                          <button class="btn btn-sm btn-outline-primary" data-bs-dismiss="modal" type="button">
                                              Retour
                                          </button>
                                          <button aria-label="Supprimer l’appareil authenticator" class="btn btn-sm btn-danger" name="delete-device" value="[PK of device_1]">
                                              Confirmer la suppression
                                          </button>
                                      </div>
                                  </div>
                              </div>
                          </div>
                          <div aria-hidden="true" class="modal fade" id="delete_[PK of device_2]_modal" tabindex="-1">
                              <div class="modal-dialog modal-dialog-centered">
                                  <div class="modal-content">
                                      <div class="modal-header">
                                          <h3 class="modal-title">
                                              Êtes-vous sûr de vouloir supprimer l'appareil bitwarden ?
                                          </h3>
                                      </div>
                                      <div class="modal-body">
                                          <p>
                                              Cette action est irréversible.
                                          </p>
                                      </div>
                                      <div class="modal-footer">
                                          <button class="btn btn-sm btn-outline-primary" data-bs-dismiss="modal" type="button">
                                              Retour
                                          </button>
                                          <button aria-label="Supprimer l’appareil bitwarden" class="btn btn-sm btn-danger" name="delete-device" value="[PK of device_2]">
                                              Confirmer la suppression
                                          </button>
                                      </div>
                                  </div>
                              </div>
                          </div>
                      </form>
                  </div>
              </div>
          </div>
      </div>
  </section>
  
  '''
# ---
# name: TestItouStaffLogin.test_login_shows_list_of_devices
  '''
  <div class="c-form mb-5">
      <h2>
          Double authentification
      </h2>
      <div class="alert alert-info" role="status">
          <div class="row">
              <div class="col-auto pe-0">
                  <i aria-hidden="true" class="ri-information-line ri-xl text-info">
                  </i>
              </div>
              <div class="col">
                  <p class="mb-2">
                      <strong>
                          Ouvrez l’un de vos appareils configurés et recopiez le code affiché :
                      </strong>
                  </p>
                  <ol class="list-unstyled">
                      <li>
                          Mon appareil
                                              
                                                  –
                                                  Dernière utilisation le
                                                  01 juin 2026 à 12h00
                      </li>
                  </ol>
                  <p class="mb-0">
                      <strong>
                          Vous n’avez plus accès à votre appareil ?
                      </strong>
                      <a class="btn-link" href="/otp/login_with_backup_code">
                          Cliquez ici pour entrer votre code de récupération
                      </a>
                  </p>
              </div>
          </div>
      </div>
      <form class="js-prevent-multiple-submit" method="post">
          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
          <fieldset>
              <div class="form-group form-group-required">
                  <label class="form-label" for="id_otp_token">
                      Entrez le code de validation unique (OTP)
                  </label>
                  <input aria-describedby="id_otp_token_helptext" autocomplete="one-time-code" autofocus="" class="form-control" id="id_otp_token" max_length="6" name="otp_token" required="" type="text"/>
                  <div class="form-text" id="id_otp_token_helptext">
                      Code à 6 chiffres généré par votre application mobile ou votre gestionnaire de mot de passe sur votre ordinateur
                  </div>
              </div>
          </fieldset>
          <div class="row">
              <div class="col-12">
                  <hr class="mb-3"/>
                  <small class="d-inline-block mb-3">
                      * champs obligatoires
                  </small>
                  <div class="form-row align-items-center justify-content-end gx-3">
                      <div class="form-group col-12 col-lg order-3 order-lg-1">
                      </div>
                      <div class="form-group col col-lg-auto order-2 order-lg-3">
                          <button aria-label="Passer à l’étape suivante" class="btn btn-block btn-primary" type="submit">
                              <span>
                                  Valider
                              </span>
                          </button>
                      </div>
                  </div>
              </div>
          </div>
      </form>
  </div>
  
  '''
# ---
